// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Legacy passenger confirmations (e2e) /tandem/passenger-confirmations (GET) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "tandemSchool": null,
  "validated": true,
  "validation": {
    "fullyUnderstoodInstructions": true,
    "noHealthProblems": true,
    "understandRisks": true,
    "undertakePilotInstructions": true,
  },
}
`;

exports[`Legacy passenger confirmations (e2e) /tandem/passenger-confirmations (POST) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "validated": true,
  "validation": {
    "fullyUnderstoodInstructions": true,
    "noHealthProblems": true,
    "understandRisks": true,
    "undertakePilotInstructions": true,
  },
}
`;

exports[`Passenger confirmations controller (e2e) /passenger-confirmations (GET) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "tandemSchool": null,
  "validated": true,
}
`;

exports[`Passenger confirmations controller (e2e) /passenger-confirmations (POST) 1`] = `
{
  "canUseData": true,
  "date": "2024-01-01T00:00:00.000Z",
  "email": "email",
  "firstname": "firstname",
  "lastname": "lastname",
  "phone": "phone",
  "place": "place",
  "signature": "signature",
  "signatureMimeType": "image/svg+xml",
  "validated": true,
}
`;
